# quickhull

./: .gitignore  CMakeLists.txt  README.md
include/: bbox.hpp  geometry.hpp  kmeans.hpp  quickhull.hpp
src/: main.cpp
